--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon src/app.js",
-    "seed": "node src/seeders/seed.js"
+    "start:gateway": "nodemon api-gateway/app.js",
+    "start:auth": "nodemon auth-service/src/app.js",
+    "start:barang": "nodemon barang-service/src/app.js",
+    "seed": "node seeders/seed.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
+    "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
